--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -30,7 +30,7 @@
     <div id="preloader">
         <div class="loader"></div>
     </div>
-    <header class="header-area"  style="background-color: black;">
+    <header class="header-area" style="background-color: black;">
         <div class="classy-nav-container breakpoint-off">
             <div class="container">
                 <!-- Classy Menu -->
@@ -58,9 +58,15 @@
                                 <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li>
                                 <li><a href="{% url 'main_page:workshop'%}">Workshops</a></li>
                                 <li><a href="{% url 'main_page:sponsors'%}">Sponsors</a></li>
-                                <li><a href="{% url 'TSP:home' %}">TSP</a></li>
 
-                                <li><a href="{% url 'ca:home' %}">CA</a></li>
+                                <li><a href="#"><i class="zmdi zmdi-caret-down-circle"></i> More</a>
+                                    <ul class="dropdown" style="width: 300%;">
+                                        <li><a href="{% url 'TSP:home' %}">Techno School Program(TSP)</a></li>
+
+                                        <li><a href="{% url 'ca:home' %}">Campus Ambassador</a></li>
+                                    </ul>
+                                </li>
+
                                 {% if user.is_authenticated %}
                                 <li><a href="#"><i class="zmdi zmdi-account-circle zmdi-hc-3x"></i></a>
                                     <ul class="dropdown">
@@ -96,89 +102,89 @@
     {% endblock %}
 
     {% block footer%}
-        <!-- Footer Area Start -->
-        <footer class="footer-area bg-img bg-overlay-2 section-padding-100-0">
-            <!-- Main Footer Area -->
-            <div class="main-footer-area">
-                <div class="container">
-                    <div class="row">
-                        <!-- Single Footer Widget Area -->
-                        <div class="col-12 col-sm-6 col-lg-4">
-                            <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
-                                <!-- Footer Logo -->
-                                <a href="#" class="footer-logo"><img src="{% static 'ca/img/logo.png' %}" alt=""></a>
-                                <p style="margin: 2px;">An initiative by IIT Ropar to promote Science & Technology.</p>
-                                <br>
-                                <!-- Social Info -->
-                                <div class="social-info">
-                                    <a href="https://www.facebook.com/advitiya.iitrpr/"><i
-                                            class="zmdi zmdi-facebook"></i></a>
-                                    <a href="https://www.instagram.com/advitiya_iitrpr/?hl=en"><i
-                                            class="zmdi zmdi-instagram"></i></a>
-                                    <a href="https://twitter.com/advitiyaiitrpr?lang=en"><i
-                                            class="zmdi zmdi-twitter"></i></a>
-
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Single Footer Widget Area -->
-                        <div class="col-12 col-sm-6 col-lg-4">
-                            <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
-                                <!-- Widget Title -->
-                                <h5 class="widget-title">Location</h5>
-                                <p>Indian Institute of Technology Ropar, Bara Phool, Birla Seed Farms, Rupnagar,Punjab,
-                                    INDIA 140001
-                                </p>
-                                <p><i class="fa fa-phone mr-3"></i>+91 9915405007</p>
-                                <p><i class="fa fa-phone mr-3"></i>+91 8619174962</p>
-                                <p><i class="fa fa-envelope-o mr-3"></i>advitiya@iitrpr.ac.in</p>
-                            </div>
-                        </div>
-
-                        <!-- Single Footer Widget Area -->
-                        <div class="col-12 col-sm-6 col-lg-4">
-                            <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
-                                <!-- Widget Title -->
-                                <h5 class="widget-title"><a style="color: white;">Workshops</a></h5>
-                                <ul class="footer-nav">
-                                    <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li>
-                                    <li><a href="{% url 'main_page:workshop'%}">Workshops at IIT Ropar</a></li>
-                                </ul>
-                                <br>
-                                <h5 class="widget-title"><a href="#" style="color: white;">Talks</a></h5>
-                                <!-- Footer Nav -->
-                                <ul class="footer-nav">
-                                    <li><a href="{% url 'main_page:talks' %}">Click here</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <!-- Single Footer Widget Area -->
-
-                    </div>
-                </div>
-            </div>
-
-            <!-- Copywrite Area -->
+    <!-- Footer Area Start -->
+    <footer class="footer-area bg-img bg-overlay-2 section-padding-100-0">
+        <!-- Main Footer Area -->
+        <div class="main-footer-area">
             <div class="container">
-                <div class="copywrite-content">
-                    <div class="row">
-                        <!-- Copywrite Text -->
-                        <div class="copywrite-text">
-                            <p>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                                template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                    href="https://colorlib.com" target="_blank">Colorlib</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
+                <div class="row">
+                    <!-- Single Footer Widget Area -->
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
+                            <!-- Footer Logo -->
+                            <a href="#" class="footer-logo"><img src="{% static 'ca/img/logo.png' %}" alt=""></a>
+                            <p style="margin: 2px;">An initiative by IIT Ropar to promote Science & Technology.</p>
+                            <br>
+                            <!-- Social Info -->
+                            <div class="social-info">
+                                <a href="https://www.facebook.com/advitiya.iitrpr/"><i
+                                        class="zmdi zmdi-facebook"></i></a>
+                                <a href="https://www.instagram.com/advitiya_iitrpr/?hl=en"><i
+                                        class="zmdi zmdi-instagram"></i></a>
+                                <a href="https://twitter.com/advitiyaiitrpr?lang=en"><i
+                                        class="zmdi zmdi-twitter"></i></a>
+
+                            </div>
                         </div>
+                    </div>
+
+                    <!-- Single Footer Widget Area -->
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
+                            <!-- Widget Title -->
+                            <h5 class="widget-title">Location</h5>
+                            <p>Indian Institute of Technology Ropar, Bara Phool, Birla Seed Farms, Rupnagar,Punjab,
+                                INDIA 140001
+                            </p>
+                            <p><i class="fa fa-phone mr-3"></i>+91 9915405007</p>
+                            <p><i class="fa fa-phone mr-3"></i>+91 8619174962</p>
+                            <p><i class="fa fa-envelope-o mr-3"></i>advitiya@iitrpr.ac.in</p>
+                        </div>
+                    </div>
+
+                    <!-- Single Footer Widget Area -->
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
+                            <!-- Widget Title -->
+                            <h5 class="widget-title"><a style="color: white;">Workshops</a></h5>
+                            <ul class="footer-nav">
+                                <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li>
+                                <li><a href="{% url 'main_page:workshop'%}">Workshops at IIT Ropar</a></li>
+                            </ul>
+                            <br>
+                            <h5 class="widget-title"><a href="#" style="color: white;">Talks</a></h5>
+                            <!-- Footer Nav -->
+                            <ul class="footer-nav">
+                                <li><a href="{% url 'main_page:talks' %}">Click here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- Single Footer Widget Area -->
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Copywrite Area -->
+        <div class="container">
+            <div class="copywrite-content">
+                <div class="row">
+                    <!-- Copywrite Text -->
+                    <div class="copywrite-text">
+                        <p>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
     {%endblock%}
 
     {% block scripts %}{%endblock%}
