--- a/accomodation/templates/accommodation/accommodation.html
+++ b/accomodation/templates/accommodation/accommodation.html
@@ -11,8 +11,8 @@
                     <h2 class="page-title">Accomodation Details</h2>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="{% url 'main_page:index' %}">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Tickets</li>
+                            <li class="breadcrumb-item"><a href="{% url 'main_page:index' %}">Advitiya</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Accommodation</li>
                         </ol>
                     </nav>
                 </div>
@@ -28,12 +28,12 @@
         <div class="row">
             <!-- Single Ticket Pricing Table -->
             <div class="col-12 col-md-6 col-lg-6">
-                <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
+                <div class="single-ticket-pricing-table text-center wow fadeInUp" data-wow-delay="300ms">
                     <h6 class="ticket-plan">3 Nights Stay</h6>
                     <center><div class="ticket-icon">
                         <img src="{% static 'main_page/img/core-img/p1.png' %}" alt="">
                     </div></center>
-                    <h2 class="ticket-price"><span>Rs</span>400</h2>
+                    <h2 class="ticket-price"><span>Rs</span>{{accommodation_fee}}</h2>
                     <a href="{% url 'accomodation:register_for_accommodation' %}" class="btn confer-btn w-100 mb-30">Get Accomodation<i
                             class="zmdi zmdi-long-arrow-right"></i></a>
                 </div>
@@ -41,16 +41,44 @@
 
             <div class="col-12 col-md-6 col-lg-6">
                     <div class="ticket-pricing-table-details">
-                        <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Luxorios Three Nights Stay</p>
-                        <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Free High Speed Internet</p>
-
-                        <p style="font-size: 1.5em; color: red;"><i class="zmdi zmdi-close"></i> No meals included.</p>
+                        <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Luxorios Three Nights Stay.</p>
+                        <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Mattress, Pillow and Blanket (if needed, 
+                            as per the weather) provided.</p>
+                        <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Free High Speed Internet.</p>
 
                     </div>
                 </div>
             </div>
 
         </div>
+
+        <div class="col-md-8 mx-auto" style="background: #9796f0;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #37378f, #7371ae);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #37378f, #7371ae); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+             margin-bottom: 50px; border-radius: 20px; padding: 40px;">
+                <br>
+                <div class="about-content-text" style="color: white;">
+                    <center><h2 style="color: #ff0000; font-weight: 500;">Important Note</h2></center>
+                    <br>
+                    <ul>
+                        <li style="list-style-type:disc; font-size: 20px;">
+                            Photo Identity Cards are mandatory for the on-site verification. Without a photo-identity card, you 
+                            won't be provided any accommodation.
+                        </li>
+                        <li style="list-style-type:disc; font-size: 20px;">
+                            A security deposit of Rs. 100 will be made at the time of on-site verification. This amout will be 
+                            returned back at the time of checkout.
+                        </li>
+                        <li style="list-style-type:disc; font-size: 20px;">
+                            Advitiya Team will not be responsible for any kind of damage/loss of your property.
+                        </li>
+                        <li style="list-style-type:disc; font-size: 20px;">
+                            You will get accommodation in IIT Ropar hostels. You are required to abide by the IIT Ropar's hostel rules. 
+                            Any violation to the rules/damage to IIT Ropar property may result in imposement of a hefty fine upon you.
+                        </li>
+                    </ul>
+                </div>
+            </div>
     </div>
 </section>
 <!-- Our Ticket Pricing Table Area End -->
